--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Ask-Out Adventure</title>
+  <title>Valentines Card</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -18,7 +18,7 @@
       <canvas id="game" width="352" height="256"></canvas>
 
       <div class="hud">
-        <h1>Will you go out with me?</h1>
+        <h1>Be my Valentines ?</h1>
         <p>Move with arrows • Enter = interact • Shift = back</p>
       </div>
     </div>
